# neuralol

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/best_models/: bot_model.pkl  jungle_model.pkl  mid_model.keras  support_model.pkl  top_model.pkl  top_model_cross_val.pkl
notebooks/: 0_dataset_visualization.ipynb  1_dataset_preprocessing.ipynb  2_model_train_val_test.ipynb  dataset_visualization.ipynb
reports/: AI_Lab_LoL_Report.tex  titlepage.tex
src/neuralol/: __init__.py  constants.py
src/neuralol/data/: __init__.py  features.py  manipulation.py
